# flask_app_aws

services/talk_booking/: pyproject.toml
services/talk_booking/web_app/: app.py
